[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ffvii-realtime"
version = "0.2.9"
description = "Remove Tactical Mode slow-motion from Final Fantasy VII Rebirth combat captures so the whole fight plays at uniform real-time speed."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Rob Esris" }]
keywords = ["ffvii", "final-fantasy", "video", "ffmpeg", "opencv", "slow-motion"]
dependencies = [
    "numpy>=1.21",
    "opencv-python-headless>=4.5",
    "imageio-ffmpeg>=0.4.9",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Conversion",
]

[project.urls]
Homepage = "https://github.com/robesris/ffvii-realtime"
Issues = "https://github.com/robesris/ffvii-realtime/issues"

[project.scripts]
ffvii-realtime = "ffvii_realtime.cli:main"

[tool.setuptools]
packages = ["ffvii_realtime"]

[tool.setuptools.package-data]
ffvii_realtime = ["templates/*.png", "templates/*/*.png"]
